--- a/gradle.properties
+++ b/gradle.properties
@@ -3,17 +3,21 @@ android.useAndroidX=true
 kotlin.code.style=official
 android.nonTransitiveRClass=true
 
-# Can be music, tracker or lyrics
+libVersion=1.0
+
+
 extType=music
-extId=test_ext
-extClass=TestExtension
+extId=DAB
+extClass=DABExtension
 
-extIconUrl=
-extName=Test Extension
-extDescription=This is the test extension you created.
+extIconUrl=https://github.com/sixnine-dotdev/DABmusic-Build/blob/d94da5e5f0cbfc3b43ca527147458dadacb84138/music.png
 
-extAuthor=Test
-extAuthorUrl=
+extName=DAB Music Player Extension
 
-extRepoUrl=
-extUpdateUrl=
+extDescription=An Echo extension that lets you search, stream, or download any song in up to 24bit/192kHz using DAB Music Player.
+
+extAuthor=Zcc09
+extAuthorUrl=https://github.com/Zcc09
+
+extRepoUrl=https://github.com/Zcc09/echo-dab-extension
+extUpdateUrl=https://api.github.com/repos/Zcc09/echo-dab-extension/releases
