--- a/gradle.properties
+++ b/gradle.properties
@@ -10,8 +10,7 @@ extType=music
 extId=DAB
 extClass=DABExtension
 
-extIconUrl=https://github.com/sixnine-dotdev/DABmusic-Build/blob/d94da5e5f0cbfc3b43ca527147458dadacb84138/music.png
-
+extIconUrl=https://github.com/Zcc09/echo-dab-extension/blob/main/ext/src/main/resources/icon.png?raw=true
 extName=DAB Music Player Extension
 
 extDescription=An Echo extension that lets you search, stream, or download any song in up to 24bit/192kHz using DAB Music Player.
