Library feed rework and tab implementation.

--- a/gradle.properties
+++ b/gradle.properties
@@ -11,12 +11,13 @@ extId=DAB
 extClass=DABExtension
 
 extIconUrl=https://github.com/Zcc09/echo-dab-extension/blob/main/ext/src/main/resources/icon.png?raw=true
-extName=DAB Music Player Extension
+extName=DAB Music
 
-extDescription=An Echo extension that lets you search, stream, or download any song in up to 24bit/192kHz using DAB Music Player.
+extDescription=An Echo extension that lets you search and stream most music in Hi-Res using DAB Music (sometimes).
 
 extAuthor=Zcc09
 extAuthorUrl=https://github.com/Zcc09
 
 extRepoUrl=https://github.com/Zcc09/echo-dab-extension
 extUpdateUrl=https://api.github.com/repos/Zcc09/echo-dab-extension/releases
+android.suppressUnsupportedCompileSdk=36
